// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RulesGenerator > RulesGenerator generates rules correctly > byCategory 1`] = `
"// These rules are automatically generated by scripts/generate-rules.ts

const styleRules: Record<string, "off"> = {
  'rulename-with-mod': "off"
};

const correctnessRules: Record<string, "off"> = {
  '@typescript-eslint/rulename-without-mod': "off"
};

export {
  styleRules,
  correctnessRules
}"
`;

exports[`RulesGenerator > RulesGenerator generates rules correctly > byScope 1`] = `
"// These rules are automatically generated by scripts/generate-rules.ts

const eslintRules: Record<string, "off"> = {
  'rulename-with-mod': "off"
};

const typescriptRules: Record<string, "off"> = {
  '@typescript-eslint/rulename-without-mod': "off"
};

export {
  eslintRules,
  typescriptRules
}"
`;
